test pages triger reset 2

--- a/ewb-interview.html
+++ b/ewb-interview.html
@@ -22,12 +22,13 @@
     <meta name="twitter:image" content="https://www.afys-ewb.org/images/og-image-ewb-interview.jpg">
     <meta name="twitter:site" content="@AFYSEWB">
 
-    <!-- Favicon Links (Same as index.html) -->
+    <!-- Favicon Links -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
     <link rel="manifest" href="images/favicons/site.webmanifest">
     <link rel="mask-icon" href="images/favicons/safari-pinned-tab.svg" color="#A9D6E5">
+    <meta name="msapplication-TileColor" content="#005a9c">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -60,14 +61,18 @@
     <main>
         <article class="longform-article section-padding" aria-labelledby="interview-title">
             <div class="container" style="max-width: 800px;">
-                <header class="article-header">
-                    <p class="article-kicker">EWB Founder's Perspective</p>
-                    <h1 id="interview-title">A Conversation on Sustainable Water & Agricultural Development in Egypt</h1>
-                    <div class="author-byline">
-                        <img src="images/team/prof-alaa-el-sadek.jpg" alt="Prof. Dr. Alaa Abdallah El-Sadek">
-                        <div>
-                            <strong>An Interview with Prof. Dr. Alaa Abdallah El-Sadek</strong>
-                            <span>Professor of Water Resources Planning & Management, Founder of the Egyptian Water Bank</span>
+                <header class="article-header interview-header">
+                    <div class="interview-author-image">
+                        <img src="images/interview/prof-elsadek-interview.jpg" alt="Prof. Dr. Alaa Abdallah El-Sadek">
+                    </div>
+                    <div class="interview-title-content">
+                        <p class="article-kicker">EWB Founder's Perspective</p>
+                        <h1 id="interview-title">A Conversation on Sustainable Water & Agricultural Development in Egypt</h1>
+                        <div class="author-byline">
+                            <div>
+                                <strong>An Interview with Prof. Dr. Alaa Abdallah El-Sadek</strong>
+                                <span>Professor of Water Resources Planning & Management</span>
+                            </div>
                         </div>
                     </div>
                 </header>
@@ -89,11 +94,11 @@
                     <p>Despite the clear benefits, the transition is not without its hurdles for farmers. The most significant challenge is the high upfront cost. Purchasing and installing equipment for drip or sprinkler systems represents a substantial investment, particularly for smallholder farmers who form the backbone of our agricultural sector. This financial barrier is often the primary obstacle.</p>
                     <p>Secondly, there's a knowledge and technical gap. Many farmers have generations of experience with traditional methods and may lack the technical know-how to operate and maintain modern systems effectively. Inadequate agricultural extension services and training can lead to improper use, such as clogged drip emitters or broken sprinklers, which undermines the system's efficiency and reinforces skepticism. To overcome this, we must couple financial support with robust, accessible training and technical assistance programs that empower farmers to fully leverage these modern tools.</p>
                 </section>
-
+                
                 <section aria-labelledby="q4">
-                    <h2 id="q4">On the role of the Egyptian Water Bank in supporting sustainable agriculture...</h2>
-                    <p>The Egyptian Water Bank (EWB) is designed to be a catalyst for sustainable agricultural development by addressing these very challenges head-on. Our core role is to provide specialized financing solutions and technical support that de-risk the transition to modern agriculture for farmers and investors. We work to provide accessible, low-interest loans specifically for modern irrigation systems, water recycling technologies, and projects that integrate renewable energy like solar power for pumping water. This targeted financial support makes sustainable practices economically viable.</p>
-                    <p>Furthermore, the EWB acts as a nexus for collaboration. We partner with government agencies, international organizations like the FAO, research institutions, and technology providers. This allows us to support projects holistically—from financing and technology acquisition to training and market access. We support the manufacturing of local irrigation components to reduce costs and create a self-sufficient domestic industry. By promoting a complete ecosystem of sustainable finance, technology, and knowledge, the EWB aims to fundamentally transform Egypt's agricultural landscape into one that is both productive and resilient.</p>
+                    <h2 id="q4">On the role of the Egyptian Water Bank in achieving sustainable agricultural development...</h2>
+                    <p>The Egyptian Water Bank (EWB) is designed to be a catalyst for sustainable agricultural development by addressing these very challenges head-on. Our core role is to provide specialized financing solutions and technical support that de-risk the transition to modern agriculture for farmers and investors. We work to facilitate financing opportunities and low-interest loans for modern irrigation systems, water recycling technologies, and projects that integrate renewable energy like solar power for pumping water. This targeted financial support makes sustainable practices economically viable.</p>
+                    <p>Furthermore, we support the manufacturing of local irrigation components to reduce costs and dependence on imports, and we champion R&D in food processing to enhance the value chain. By promoting a complete ecosystem of sustainable finance, technology, knowledge, and market access, the EWB aims to fundamentally transform Egypt's agricultural landscape into one that is both productive and resilient.</p>
                 </section>
 
                 <section aria-labelledby="q5">
@@ -112,7 +117,43 @@
         </article>
     </main>
     <footer class="footer-main">
-        <!-- The footer is identical to index.html -->
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-col footer-logos">
+                    <img src="images/logo-afys-footer.png" alt="AFYS Footer Logo">
+                    <img src="images/logo-ewb-footer.png" alt="EWB Footer Logo">
+                    <p>Synergizing science and strategic water management for a sustainable Arab future.</p>
+                </div>
+                <div class="footer-col">
+                    <h4>Navigate</h4>
+                    <ul>
+                        <li><a href="afys-profile.html">About AFYS</a></li>
+                        <li><a href="ewb-profile.html">About EWB</a></li>
+                        <li><a href="afys-news.html">News & Articles</a></li>
+                        <li><a href="partnerships.html">Partners</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Contact Us</h4>
+                    <address>
+                        <p><i class="fas fa-map-marker-alt" aria-hidden="true"></i> 58G, Bait Al-Watan, Crazy Way Axis,<br>Sheikh Zayed, Giza, Egypt</p>
+                        <p><i class="fas fa-envelope" aria-hidden="true"></i> <a href="mailto:info@afys-ewb.org">info@afys-ewb.org</a></p>
+                        <p><i class="fas fa-user-tie" aria-hidden="true"></i> <a href="mailto:alaa.elsadek@afys-ewb.org">alaa.elsadek@afys-ewb.org</a></p>
+                    </address>
+                </div>
+                <div class="footer-col">
+                    <h4>Follow Us</h4>
+                    <div class="social-links">
+                        <a href="https://www.facebook.com/p/Arab-Foundation-of-Young-Scientists-100057195079533/" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.linkedin.com/company/arab-foundation-of-young-scientists/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; <span id="currentYear"></span> Arab Foundation for Young Scientists & Egyptian Water Bank. All Rights Reserved.</p>
+            </div>
+        </div>
     </footer>
     <script src="js/script.js"></script>
 </body>
