--- a/partnerships.html
+++ b/partnerships.html
@@ -22,12 +22,13 @@
     <meta name="twitter:image" content="https://www.afys-ewb.org/images/og-image-partnerships.jpg">
     <meta name="twitter:site" content="@AFYSEWB">
 
-    <!-- Favicon Links (Same as index.html) -->
+    <!-- Favicon Links -->
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
     <link rel="manifest" href="images/favicons/site.webmanifest">
     <link rel="mask-icon" href="images/favicons/safari-pinned-tab.svg" color="#FFAD7A">
+    <meta name="msapplication-TileColor" content="#005a9c">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -65,11 +66,10 @@
             </div>
         </section>
 
-        <section class="partners-grid section-padding" aria-labelledby="partners-list-heading">
+        <section class="section-padding" aria-labelledby="partners-list-heading">
             <div class="container">
                 <h2 id="partners-list-heading" class="section-title">Key Partners & Supporters</h2>
-                <div class="partner-logos-container">
-                    <!-- Partner Logos Section -->
+                <div class="partner-logos-flex-container">
                     <div class="partner-logo-item">
                         <a href="https://www.asu.edu.eg/english/" target="_blank" rel="noopener noreferrer" title="Ain Shams University">
                             <img src="images/partners/ain-shams-university-logo.png" alt="Ain Shams University Official Logo">
