Test Pages trigger reset

--- a/ewb-profile.html
+++ b/ewb-profile.html
@@ -145,8 +145,8 @@
                  <p class="lead-text">Our impact is nationwide. This map highlights key governorates where our priority projects are making a difference. Click on a marker to learn more about our work in that specific region.</p>
                 
                  <div class="map-placeholder">
-                    <iframe 
-                        src="https://www.google.com/maps/d/u/0/embed?mid=1h4jT9s_Z-4Z-XyZ-h7Jg4b_Z0yZ7-ABC" 
+                    <!-- YOUR GOOGLE MY MAPS EMBED CODE IS PLACED HERE -->
+                    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1aAWjLawi8bz98cM6pvQipMWe71A2nn8&ehbc=2E312F" 
                         width="100%" 
                         height="600" 
                         style="border:0;" 
@@ -155,18 +155,6 @@
                         referrerpolicy="no-referrer-when-downgrade"
                         title="Interactive Map of Egyptian Water Bank Projects">
                     </iframe>
-                 </div>
-                 <div class="map-instructions">
-                    <h4>How to Create & Update This Map:</h4>
-                    <ol>
-                        <li>Go to <a href="https://mymaps.google.com/" target="_blank" rel="noopener noreferrer">Google My Maps</a> and create a new map.</li>
-                        <li>Add markers for your project locations (e.g., Sohag, Qena). You can customize icons and colors.</li>
-                        <li>For each marker, add a title and a description with project details.</li>
-                        <li>Click the "Share" button, and in the pop-up, click "Anyone with this link can view."</li>
-                        <li>Click the three dots menu next to the map title and select "Embed on my site".</li>
-                        <li>Copy the entire `<iframe>` code provided by Google.</li>
-                        <li>In the `ewb-profile.html` file, replace the placeholder `<iframe>` tag (including its `src`) with the new one you copied. The example `src` I've included is just a placeholder and will not work.</li>
-                    </ol>
                  </div>
             </div>
         </section>
