Test Pages trigger reset

--- a/ewb-profile.html
+++ b/ewb-profile.html
@@ -83,7 +83,7 @@
         <section class="section-padding bg-light" aria-labelledby="ewb-services-heading">
             <div class="container">
                 <h2 id="ewb-services-heading" class="section-title">Our Services & Core Activities</h2>
-                <div class="services-banner">
+                <div class="services-banner-full">
                     <img src="images/ewb/services-overview.jpg" alt="A montage showcasing the diverse services of the Egyptian Water Bank, including desalination, irrigation, and water conservation.">
                 </div>
                 <div class="swot-grid" style="margin-top: 3rem;">
@@ -145,8 +145,8 @@
                  <p class="lead-text">Our impact is nationwide. This map highlights key governorates where our priority projects are making a difference. Click on a marker to learn more about our work in that specific region.</p>
                 
                  <div class="map-placeholder">
-                    <!-- YOUR GOOGLE MY MAPS EMBED CODE IS PLACED HERE -->
-                    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1aAWjLawi8bz98cM6pvQipMWe71A2nn8&ehbc=2E312F" 
+                    <iframe 
+                        src="https://www.google.com/maps/d/u/0/embed?mid=1aAWjLawi8bz98cM6pvQipMWe71A2nn8&ehbc=2E312F"
                         width="100%" 
                         height="600" 
                         style="border:0;" 
@@ -155,6 +155,10 @@
                         referrerpolicy="no-referrer-when-downgrade"
                         title="Interactive Map of Egyptian Water Bank Projects">
                     </iframe>
+                 </div>
+                 <div class="map-instructions">
+                    <h4>About This Map</h4>
+                    <p>This interactive map is a living document showcasing our key project sites and areas of intervention. It is created using Google My Maps, which allows us to provide real-time updates and detailed information for each location. Click on the markers to explore project specifics, challenges addressed, and the impact on local communities.</p>
                  </div>
             </div>
         </section>
