Test Pages trigger reset

--- a/afys-profile.html
+++ b/afys-profile.html
@@ -28,6 +28,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
     <link rel="manifest" href="images/favicons/site.webmanifest">
     <link rel="mask-icon" href="images/favicons/safari-pinned-tab.svg" color="#FFAD7A">
+    <meta name="msapplication-TileColor" content="#ffad7a">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -117,7 +118,43 @@
 
     </main>
     <footer class="footer-main">
-        <!-- The footer is identical to index.html -->
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-col footer-logos">
+                    <img src="images/logo-afys-footer.png" alt="AFYS Footer Logo">
+                    <img src="images/logo-ewb-footer.png" alt="EWB Footer Logo">
+                    <p>Synergizing science and strategic water management for a sustainable Arab future.</p>
+                </div>
+                <div class="footer-col">
+                    <h4>Navigate</h4>
+                    <ul>
+                        <li><a href="afys-profile.html">About AFYS</a></li>
+                        <li><a href="ewb-profile.html">About EWB</a></li>
+                        <li><a href="afys-news.html">News & Articles</a></li>
+                        <li><a href="partnerships.html">Partners</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Contact Us</h4>
+                    <address>
+                        <p><i class="fas fa-map-marker-alt" aria-hidden="true"></i> 58G, Bait Al-Watan, Crazy Way Axis,<br>Sheikh Zayed, Giza, Egypt</p>
+                        <p><i class="fas fa-envelope" aria-hidden="true"></i> <a href="mailto:info@afys-ewb.org">info@afys-ewb.org</a></p>
+                        <p><i class="fas fa-user-tie" aria-hidden="true"></i> <a href="mailto:alaa.elsadek@afys-ewb.org">alaa.elsadek@afys-ewb.org</a></p>
+                    </address>
+                </div>
+                <div class="footer-col">
+                    <h4>Follow Us</h4>
+                    <div class="social-links">
+                        <a href="https://www.facebook.com/p/Arab-Foundation-of-Young-Scientists-100057195079533/" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.linkedin.com/company/arab-foundation-of-young-scientists/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; <span id="currentYear"></span> Arab Foundation for Young Scientists & Egyptian Water Bank. All Rights Reserved.</p>
+            </div>
+        </div>
     </footer>
     <script src="js/script.js"></script>
 </body>
