Test Pages trigger reset

--- a/afys-profile.html
+++ b/afys-profile.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About AFYS | Arab Foundation for Young Scientists</title>
-    <meta name="description" content="Discover the mission, vision, objectives, and leadership of the Arab Foundation for Young Scientists (AFYS), dedicated to building a knowledge economy in the Arab world.">
+    <meta name="description" content="Discover the mission, vision, objectives, and leadership of the Arab Foundation of Young Scientists (AFYS), dedicated to building a knowledge economy in the Arab world.">
 
-    <meta name="theme-color" content="#FFAD7A"> <!-- AFYS Primary Color -->
+    <meta name="theme-color" content="#FFAD7A">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="About AFYS | Arab Foundation for Young Scientists">
@@ -22,7 +22,8 @@
     <meta name="twitter:image" content="https://www.afys-ewb.org/images/og-image-afys.jpg">
     <meta name="twitter:site" content="@AFYSEWB">
 
-    <!-- Favicon Links (Same as index.html) -->
+    <!-- Favicon Links -->
+    <link rel="icon" type="image/x-icon" href="images/favicons/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
@@ -81,10 +82,23 @@
             </div>
         </section>
 
-        <section class="section-padding bg-light" aria-labelledby="afys-objectives-heading">
+        <section class="section-padding bg-light" aria-labelledby="afys-centers-heading">
+            <div class="container text-center">
+                <h2 id="afys-centers-heading" class="section-title">Our Centers of Excellence</h2>
+                <p class="lead-text">AFYS establishes specialized centers to address key challenges and empower specific communities. Our centers act as hubs for training, innovation, and strategic development, directly contributing to Egypt's Vision 2030.</p>
+                <div class="center-highlight-card">
+                    <img src="images/afys/center-for-empowerment-logo.png" alt="Center for Young Scientist Empowerment Logo">
+                    <h3>Center for Young Scientist and Graduate Empowerment</h3>
+                    <p>A pivotal initiative designed to bridge the gap between academic skills and labor market demands through targeted training, entrepreneurship support, and strategic partnerships.</p>
+                    <a href="center-for-empowerment.html" class="btn btn-primary-orange">Learn More About the Center <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+        </section>
+        
+        <section class="section-padding" aria-labelledby="afys-objectives-heading">
             <div class="container">
                 <h2 id="afys-objectives-heading" class="section-title">Our Core Objectives</h2>
-                <div class="swot-grid"> <!-- Re-using swot-grid for a clean multi-column list -->
+                <div class="swot-grid">
                     <div class="swot-card">
                         <h4 style="color:var(--afys-secondary);"><i class="fas fa-globe-africa"></i> Global Networking</h4>
                         <p>Connect young Arab scientists with their peers and with the international scientific community to foster collaboration and knowledge exchange.</p>
@@ -105,7 +119,7 @@
             </div>
         </section>
 
-         <section class="section-padding" aria-labelledby="afys-leadership-title">
+         <section class="section-padding bg-light" aria-labelledby="afys-leadership-title">
             <div class="container text-center" style="max-width: 800px;">
                 <h2 id="afys-leadership-title" class="section-title">Foundation Leadership</h2>
                 <img src="images/team/prof-alaa-el-sadek.jpg" alt="Portrait of Prof. Dr. Alaa Abdallah El-Sadek" class="profile-image" style="max-width:200px; margin: 0 auto 1.5rem;">
