Add aria state handling for theme toggle

--- a/afys-news.html
+++ b/afys-news.html
@@ -47,6 +47,9 @@
             <button class="menu-toggle" id="mobile-menu" aria-label="Open navigation menu" aria-expanded="false" aria-controls="main-nav-menu">
                 <i class="fas fa-bars" aria-hidden="true"></i>
             </button>
+            <button class="theme-toggle" id="theme-toggle" aria-label="Activate dark mode" aria-pressed="false">
+                <i class="fas fa-moon" aria-hidden="true"></i>
+            </button>
             <ul class="nav-menu" id="main-nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="afys-profile.html">About AFYS</a></li>
