--- a/ewb-interview.html
+++ b/ewb-interview.html
@@ -43,7 +43,7 @@
             <button class="menu-toggle" id="mobile-menu" aria-label="Open navigation menu" aria-expanded="false" aria-controls="main-nav-menu">
                 <i class="fas fa-bars" aria-hidden="true"></i>
             </button>
-            <button class="theme-toggle" id="theme-toggle" aria-label="Activate dark mode">
+            <button class="theme-toggle" id="theme-toggle" aria-label="Activate dark mode" aria-pressed="false">
                 <i class="fas fa-moon" aria-hidden="true"></i>
             </button>
             <ul class="nav-menu" id="main-nav-menu">
